--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,8 @@ dependencies:
 - gmp=6.1.2=h6c8ec71_1
 - gst-plugins-base=1.12.4=h33fb286_0
 - gstreamer=1.12.4=hb53b477_0
+- h5py=2.7.1=py36h3585f63_0
+- hdf5=1.10.1=h9caa474_1
 - html5lib=0.9999999=py36_0
 - icu=58.2=h9c2bf20_1
 - intel-openmp=2018.0.0=hc7b2577_8
@@ -31,6 +33,7 @@ dependencies:
 - jupyter_core=4.4.0=py36h7c827e3_0
 - jupyterlab=0.31.10=py36_0
 - jupyterlab_launcher=0.10.5=py36_0
+- keras=2.1.4=py36_0
 - libedit=3.1=heed3624_0
 - libffi=3.2.1=hd88cf55_4
 - libgcc-ng=7.2.0=h7cc24e2_2
@@ -68,6 +71,7 @@ dependencies:
 - python=3.6.4=hc3d631a_1
 - python-dateutil=2.6.1=py36h88d3b88_1
 - pytz=2018.3=py36_0
+- pyyaml=3.12=py36hafb9ca4_1
 - pyzmq=16.0.3=py36he2533c7_0
 - qt=5.6.2=hd25b39d_14
 - readline=7.0=ha6073c6_4
@@ -91,6 +95,7 @@ dependencies:
 - werkzeug=0.14.1=py36_0
 - wheel=0.30.0=py36hfd4bba0_1
 - xz=5.2.3=h55aa19d_2
+- yaml=0.1.7=had09818_2
 - zeromq=4.2.2=hbedb6e5_2
 - zlib=1.2.11=ha838bed_2
 - pip:
